src/test/rustdoc-ui/error-in-impl-trait/closure.stderr
error[E0433]: failed to resolve: could not resolve path `content::doesnt::matter`
  --> $DIR/closure.rs:3:8
   |
LL |     || content::doesnt::matter()
   |        ^^^^^^^^^^^^^^^^^^^^^^^ could not resolve path `content::doesnt::matter`
   |
   = note: this error was originally ignored because you are running `rustdoc`
   = note: try running again with `rustc` or `cargo check` and you may get a more detailed error

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
